<resources>
    <string name="app_name">InventoryApp</string>
    <string name="InventoryEditor">Inventory Editor</string>
    <string name="productName">Product Name</string>
    <string name="Price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="empty">No Inventory Data please Enter a new Product to create a list</string>
    <string name="newProduct">New Product</string>
    <string name="save">Save</string>
    <string name="deleteall">Delete all product</string>
    <string name="AddNew">Add new product</string>
    <string name="delete">Delete</string>
    <string name="ordermore">order more</string>
    <string name="sell">Sale</string>
    <string name="SAR">SAR</string>
    <string name="clickOnImage"> click on the image to set a new image</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="zero">0</string>
    <string name="product">car</string>
</resources>