<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.inventoryapp.InventoryEditor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/productName"
            android:textColor="@color/purple"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/NameText"
            android:layout_width="290dp"
            android:layout_height="39dp"
            android:layout_marginLeft="20dp"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/price"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/Price"
            android:textColor="@color/purple"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="98dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/priceText"
                android:layout_width="179dp"
                android:layout_height="41dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:inputType="number"
                tools:layout_editor_absoluteX="118dp"
                tools:layout_editor_absoluteY="76dp" />

            <TextView
                android:id="@+id/sr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="100dp"
                android:text="@string/SAR" />
        </RelativeLayout>

        <TextView
            android:id="@+id/Quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.00"
            android:text="@string/quantity"
            android:textColor="@color/purple"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/quantityText"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:inputType="number" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/increase"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/increase"
                android:backgroundTint="@color/purple" />

            <Button
                android:id="@+id/decrease"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_alignBottom="@+id/increase"
                android:layout_marginLeft="100dp"
                android:background="@drawable/decrease"
                android:backgroundTint="@color/purple" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageholder"
            android:layout_width="158dp"
            android:layout_height="81dp"
            app:srcCompat="@drawable/images" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/clickOnImage" />
    </LinearLayout>
</ScrollView>